# wgpu_demo

./: Cargo.toml  README.md
src/: camera.rs  light.wgsl  main.rs  model.rs  shader.wgsl  texture.rs
