[package]
name = "wgpu_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
winit = "*"
cgmath = "*"
env_logger = "*"
log = "*"
wgpu = "*"
pollster = "*"
bytemuck = { version = "*", features = [ "derive" ] }
anyhow = "*"
tobj = "*"
rayon = "*"

[build-dependencies]
anyhow = "*"
fs_extra = "*"
glob = "*"
